--- a/src/frontend/Shared/MainLayout.razor
+++ b/src/frontend/Shared/MainLayout.razor
@@ -1,17 +1,11 @@
-﻿@inherits LayoutComponentBase
+﻿@* ./Shared/MainLayout.razor *@
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
+@inherits LayoutComponentBase
+
+<div>
+    <NavMenu />
+
+    <div>
+        @Body
     </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
 </div>
