--- a/src/frontend/Pages/PostDetails.razor
+++ b/src/frontend/Pages/PostDetails.razor
@@ -18,7 +18,7 @@ else
         <div class="container mx-auto flex px-5 pb-24 items-center justify-center flex-col">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">@postDetails.Data.Title</h1>
             <img class=" mb-10 object-cover object-center rounded" alt="hero" src="@postDetails.Data.Image.Url" style="height:400px;width:900px">
-            <div class=" w-full">
+            <div class=" w-3/5">
                 <div class="mb-8 leading-relaxed">@((MarkupString)postDetails.Data.Content)</div>
             </div>
             <div class="p-2 w-full">
